# AtitdChemistryHelper

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
atitdchemistryhelper/: CMakeLists.txt  main.cpp  wikiessencesdatagatherer.cpp  wikiessencesdatagatherer.hpp
cmake/: boost.cmake  catch.cmake  gsl.cmake  openssl.cmake  qt.cmake
libchemistryhelper/: CMakeLists.txt  compoundrequirement.cpp  compoundrequirement.hpp  essence.cpp  essence.hpp  essencerecipefinder.cpp  essencerecipefinder.hpp  iessencesdatagatherer.cpp  iessencesdatagatherer.hpp  property.cpp  property.hpp  strings.cpp  strings.hpp  wikiessencesdatagatherer.cpp
libchemistryhelper/utils/: algorithms.hpp  strings.cpp  strings.hpp
litmuscompiler/: CMakeLists.txt  litmusresult.cpp  litmusresult.hpp  main.cpp
qatitdchemistryhelper/: CMakeLists.txt  essencemodel.cpp  essencemodel.hpp  essencetab.cpp  essencetab.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  recipecomposer.cpp  recipecomposer.hpp  reciperesultmodel.cpp  reciperesultmodel.hpp  reciperesulttab.cpp  reciperesulttab.hpp  reciperesultworker.cpp  reciperesultworker.hpp  utils.cpp  utils.hpp
unit_tests/: CMakeLists.txt  main.cpp  test_compoundrequirement_parsing.cpp  tests_strings.cpp
